--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
-.App {
+/* .App {
   text-align: center;
+}
+
+body{
+  background-color: black;
 }
 
 .App-logo {
@@ -35,4 +39,7 @@
   to {
     transform: rotate(360deg);
   }
+} */
+body{
+  background-color: black;
 }
